Fix alignment using line-height instead of padding

--- a/css/fonts-customizer.css
+++ b/css/fonts-customizer.css
@@ -27,14 +27,13 @@ h3.jetpack-fonts__type-header {
 	border-radius: 3px;
 	cursor: pointer;
 	height: 45px;
-	line-height: 35px;
   font-size: 28px;
-	/*line-height: 40px;*/
+	line-height: 45px;
 }
 
 .jetpack-fonts__current-font--default {
-	height: 35px;
-	padding: 5px 10px 5px;
+	height: 45px;
+	padding-left: 10px;
 }
 
 .jetpack-fonts__current-font--default:after {
@@ -159,11 +158,11 @@ h3.jetpack-fonts__type-header {
 }
 
 .jetpack-fonts__option {
-	height: 35px;
+	height: 45px;
 	background-repeat: no-repeat;
 	font-size: 28px;
-	line-height: 35px;
-	padding: 5px 10px 5px;
+	line-height: 45px;
+	padding-left: 10px;
 }
 
 #font-select .jetpack-fonts__option {
